# weather-station

./: .gitignore  Cargo.toml
.cargo/: config.toml
src/: main.rs
