[package]
authors = ["Franck Barbenoire <contact@franck-barbenoire.fr>"]
edition = "2021"
readme = "README.md"
name = "electronic-clock"
version = "0.1.0"

[dependencies]
cortex-m = "0.7.5"
cortex-m-rt = "0.7.1"
cortex-m-semihosting = "0.5.0"
embedded-hal = "0.2.7"
heapless = "0.7.14"
nb = "1.0.0"
panic-halt = "0.2.0"

embedded-graphics = "0.7.1"
max7219 = "0.3.1"
ssd1306 = "0.7.0"

# Uncomment for the panic example.
# panic-itm = "0.4.2"

# Uncomment for the allocator example.
# alloc-cortex-m = "0.4.2"

# Uncomment for the device example.
# Update `memory.x`, set target to `thumbv7em-none-eabihf` in `.cargo/config`,
# and then use `cargo build --examples device` to build it.
# [dependencies.stm32f3]
# features = ["stm32f303", "rt"]
# version = "0.7.1"

[dependencies.stm32f1xx-hal]
version = "0.9.0"
features = ["rt", "stm32f103", "medium"]

# this lets you use `cargo fix`!
[[bin]]
name = "electronic-clock"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
